2015-11-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h: Delete an unused type definition.
	* src/nano.h: Improve several comments.
	* src_text.c(do_wrap): Elide two variables.

2015-10-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (copy_from_filestruct): When pasting while the mark is
	on, the mark's pointer needs to be refreshed only when it is on the
	same line as the cursor, and the mark's x coordinate only when the
	mark is located after the cursor.  This fixes Savannah bug #46347.
	* src/nano.c (copy_from_filestruct): Improve comments and combine
	two conditions.
	* ChangeLog: Correct the description of an old change.

2015-10-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (add_undo): Only skip adding an undo when the current
	action equals the last action.  This condition is needed for when
	typing text is broken by an undo+redo.  Fixes Savannah bug #46323.
	* src/text.c (do_redo): Check for "nothing to redo" earlier, so we
	can restore the possible warning about an internal error.
	* src/text.c (add_undo): Remove an 'if' that will never be true,
	and remove some assignments that have already been done.

2015-10-29  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/files.c (do_writeout), src/nano.c (no_current_file_name_warning,
	do_exit): When option -t is given, make ^O work the same way as under
	Pico, writing out the file without prompting.  And make it work even
	better than Pico when the current file doesn't have a name yet.  This
	fixes Savannah bug #45415.

2015-10-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_redo): For an INSERT, 'u->mark_begin_lineno' is not
	an actual line number, so spoof it.  It can be spoofed, because 'f'
	is not used for the INSERT case.  This fixes Savannah bug #45524.
	* src/text.c (do_redo): Remove a condition that can never occur.
	Also rewrite a loop to become somewhat clearer.

2015-10-27  Benno Schulenberg  <bensberg@justemail.net>